# AI-Powered-Document-Q-A-System

./: .env  .env.example  README.md  app.py  evaluation_results.csv  evaluation_summary.json  main.ipynb  main.py  pyproject.toml  requirements.txt  run_ui.sh  setup.sh
data/: coffee_maker_faq.txt  evaluation_questions.csv  multi_passage_answer_questions.csv  single_passage_answer_questions.csv  smart_coffee_maker_manual.txt
scripts/: evaluate_rag.py
src/: __init__.py
src/rag/: __init__.py
src/rag/document_processing/: __init__.py  chunker.py  models.py  processor.py
src/rag/generation/: __init__.py  generator.py  prompts.py
src/rag/retrieval/: __init__.py  reranker.py  retriever.py
src/rag/vector_store/: __init__.py  base.py  factory.py  in_memory.py
