[project]
name = "VIVEK"
version = "0.1.0"
description = "RAG System for Product Documentation QA with Hybrid Search"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "langchain>=0.1.0",
    "langchain-text-splitters>=0.0.1",
    "langchain-google-genai>=0.0.10",
    "langchain-community>=0.0.10",
    "google-generativeai>=0.3.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "rank-bm25>=0.2.2",
    "streamlit>=1.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]
pinecone = ["pinecone-client>=3.0.0"]
weaviate = ["weaviate-client>=4.0.0"]
milvus = ["pymilvus>=2.3.0"]
